ARGOCD/base/deployment-db.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jpetstoredb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jpetstoredb
  template:
    metadata:
      labels:
        app: jpetstoredb
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: jpetstoredb
        image: quay.io/jmlafont/jpetstoredb
        ports:
        - containerPort: 3306
