ARGOCD/base/deployment-web.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jpetstoreweb
spec:
  replicas: 1
  selector:
      matchLabels:
        app: jpetstoreweb
  template:
    metadata:
      labels:
        app: jpetstoreweb
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: jpetstoreweb
        image: quay.io/jmlafont/jpetstoreweb:1.0
        ports:
        - containerPort: 9080
        readinessProbe:
          httpGet:
            path: /
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
