ARGOCD/base/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jpetstore
spec:
  port:
    targetPort: 9080
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
